deploy/pods.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnk-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cnk
  template:
    metadata:
      labels:
        app: cnk
    spec:
      containers:
      - name: cnk-frontend-app
        image: yuyatinnefeld/cloud-native-kiosk-frontend:1.1.0
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /health_frontend
            port: 5000
      - name: cnk-backend-app
        image: yuyatinnefeld/cloud-native-kiosk-backend:1.1.0
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /health_backend
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
      restartPolicy: Always
