deploy/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnk-deployment
  labels:
    app: cnk
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cnk
  template:
    metadata:
      labels:
        app: cnk
    spec:
      containers:
        - name: cnk-frontend
          image: yuyatinnefeld/cloud-native-kiosk-frontend:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: cnk-service
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: cnk
  type: LoadBalancer
