deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cnk-service
spec:
  ports:
  - port: 5000
    protocol: http
    targetPort: 5000
  selector:
    app: cnk
  type: LoadBalancer
